Refactor backup script to include preview option
The code changes add a new `--preview` option to the Docker Volume Backup Script. This allows users to display a list of volumes and sizes, and ask for confirmation before proceeding with the backup. The `--auto-upload` option has been removed as it is now redundant with the new `--preview` option. The README file has also been updated to reflect these changes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,5 @@ services:
       - ./credentials.json:/data/credentials.json
     restart: unless-stopped
     container_name: volume-backups
-    command: --minio-url=${MINIO_URL} --access-key=${MINIO_ACCESS_KEY} --secret-key=${MINIO_SECRET_KEY} --bucket=${MINIO_BUCKET} --auto-upload 
+    command: --minio-url=${MINIO_URL} --access-key=${MINIO_ACCESS_KEY} --secret-key=${MINIO_SECRET_KEY} --bucket=${MINIO_BUCKET}
     
